--- a/commands.tex
+++ b/commands.tex
@@ -1,6 +1,8 @@
 \newcommand{\defeq}{\mathrel{:=}}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor} % floor function
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil} % ceil function
+\let\ip\undefined
+\DeclarePairedDelimiter{\ip}{\langle}{\rangle} % inner product
 
 \newcommand{\Ver}{\mathrm{Ver}}
 
@@ -29,7 +31,9 @@
 \newcommand{\Cay}{\mathrm{Cay}}
 
 \newcommand{\val}{\mathrm{val}}
+\newcommand{\UNSAT}{\mathrm{UNSAT}}
 \renewcommand{\epsilon}{\varepsilon}
+\newcommand{\size}{\mathrm{size}}
 
 \newcommand{\PRIMES}{\mathrm{PRIMES}}
 \newcommand{\ThreeCOL}{\mathrm{3COL}}
@@ -119,3 +123,5 @@
 \newcommand{\vecx}{\vec{x}}
 \newcommand{\vecy}{\vec{y}}
 \newcommand{\vecz}{\vec{z}}
+
+\newcommand{\varx}{\mathrm{x}}
