--- a/introduction.tex
+++ b/introduction.tex
@@ -20,7 +20,8 @@ PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
 \item $x\in\binset^*$に対して$\abs{x}$を$x$の文字数とする.
 \item アルゴリズム$A$に対し, $A(x)$を入力$x \in \binset^*$に対するアルゴリズム$A$の出力とする. ここで, 単に「アルゴリズム」と言った場合は決定的アルゴリズムを指し, 乱択アルゴリズムについては明示的に言及する.
 \item 関数$T(n)\colon\Nat\to\Nat$を考える. 十分大きな全ての$n\in\Nat$と全ての$x\in\binset^n$に対して, $A$が$A(x)$を出力するまでにかかる計算ステップ数の最大値が高々$T(n)$であるとき, アルゴリズム$A$の計算量は$T(n)$であるという. 特に, ある($n$に依らない)定数$c>0$が存在して計算量が$O(n^c)$で抑えられるアルゴリズムを\emph{多項式時間アルゴリズム}という\footnote{計算モデルによって一つ一つの計算ステップの定義は異なるが, 原理的には1bitの演算や記憶領域への読み書きの回数と思えばよい. 多項式時間で動くかどうかの議論であれば, 多くの古典的な計算モデルは等価である.}
-\item 慣例的な記法だが, 二つの文字列$x,y\in\binset^*$を入力として受け取るアルゴリズムは$A(x,y)$と表す. 三つ以上の場合も$A(x,y,z)$などと表す.
+\item 計算量理論において慣例的に用いられる記法だが, 関数$f(n)$が$n$に関する多項式であることを$f(n)=n^{O(1)}$と表す. 例えば多項式時間アルゴリズムとは, 十分大きな全ての$n\in\Nat$に対して, 長さ$n$の任意の文字列$x\in\binset^n$を受け取ったときの時間計算量が$n^{O(1)}$で抑えられるアルゴリズムである.
+\item 二つの文字列$x,y\in\binset^*$を入力として受け取るアルゴリズムは$A(x,y)$と表す. 三つ以上の場合も$A(x,y,z)$などと表す.
 \end{itemize}
 
 計算量理論で最も基本的な問題群として判定問題と呼ばれる問題群がある.
@@ -37,10 +38,29 @@ PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
   $A$は$L$を解くという.
 \end{definition}
 
+\begin{example}{グラフ連結性判定問題}{graph-connectivity-problem}
+  グラフ$G=(V,E)$の隣接行列を$A \in \binset^{|V|\times|V|}$とする.
+  この行列を長さ$|V|^2$の二進文字列として表現したものを$\mathsf{str}(A)$とする.
+  すなわち, $\mathsf{str}(A)$の第$k$ビットは, $i=\ceil{k/|V|}+1, j=k\mod |V|+1$に対して$A(i,j)$の値として与えられる.
+  このとき,
+  \begin{align*}
+    L = \qty{ \mathsf{str}(A)\in\binset^{|V|^2} \colon \text{$A$は連結グラフ$G$の隣接行列} }
+  \end{align*}
+  は与えられたグラフが連結であるかどうかを判定する判定問題である.
+\end{example}
+
 この講義では「効率的に解ける」といった場合, 多項式時間アルゴリズムによって解けることを指す. そのような判定問題の集合をクラスPという.
 \begin{definition}{クラスP}{classP}
-  判定問題$L$は, それを解く多項式時間アルゴリズムが存在するとき, $\P$に属するという.
+  判定問題$L$は, それを解く多項式時間アルゴリズムが存在するとき, $\P$に属するといい, $L \in \P$と表す.
 \end{definition}
+
+\begin{remark}{入力のフォーマット}{input-format}
+  \cref{ex:graph-connectivity-problem}では入力としてグラフの隣接行列を二進文字列として表現したものを考えたが, 一般にグラフの表現方法は他にも隣接リストなどが考えられる.
+  しかし, 例えばグラフを隣接行列で表現するか隣接リストで表現するかは, それぞれのフォーマット間の変換が多項式時間で行えるため, \emph{多項式時間で解けるかどうか}という点では等価である.
+
+  そのため, 厳密には問題を定義する際はその入力のフォーマット(グラフを隣接行列で表現するか, 隣接リストで表現するか, など)も指定する必要があるが,
+  フォーマット間の変換が自明に多項式時間で行える場合に限ってはこの講義ではそのようなフォーマットの指定を省略し, 例えばグラフ連結性判定問題を「グラフが与えられたときにそれが連結であるかどうかを判定する問題」と表現する.
+\end{remark}
 
 次に乱択アルゴリズムについて定義する. 端的に言えばアルゴリズムの内部でコイントスを行うものを乱択アルゴリズムという.
 ここでは明示的にランダムシードを受け取るアルゴリズムを乱択アルゴリズムと呼ぶことにする.
