--- a/alphabet_reduction.tex
+++ b/alphabet_reduction.tex
@@ -1,3 +1,8 @@
-\chapter{アルファベット削減} \label{chap:alphabet-reduction}
+\chapter{割り当てテスターとアルファベット削減} \label{chap:assignment-tester-and-alphabet-reduction}
 
-\section{PCP定理の証明}
+本チャプターでは, 割り当てテスターとアルファベット削減について述べる.
+
+\section{割り当てテスター}
+
+\section{アルファベット削減}
+
