制約グラフに関する新たな定義として多重グラフを追加し、関連する操作の基礎を整備。既存のファイルにおいて、不要な中間生成物を削除し、文書の整合性を向上させるための修正を実施。

--- a/CSP.tex
+++ b/CSP.tex
@@ -166,3 +166,13 @@ PCP定理の証明は, NP-完全な2-CSPである3彩色問題のインスタン
   制約グラフ$G=\ip{(V,E),\Sigma,\calC}$に対して, その構造を表すグラフ$(V,E)$の性質を表す用語はそのまま制約グラフにも適用する.
   例えば, $(V,E)$が連結であるときに$G$は連結であるといい, $(V,E)$が正則であるならば$G$は正則であるという.
 \end{remark}
+
+\section{多重グラフの導入とエクスパンダーグラフ}
+
+以後, 制約グラフに関する様々な操作をしていく上で多重グラフのフォーマルな定義を与えておく.
+
+\begin{definition}{多重グラフ}{multigraph}
+有限集合$V$と多重集合$E$の組$(V,E)$を\emph{多重グラフ}という.
+ここで$E$は$V\cup \binom{V}{2}$の元から構成される多重集合であり, $e\in E$は$\abs{e}=1$ならば\emph{自己ループ}であるという.
+\end{definition}
+
