--- a/ref.bib
+++ b/ref.bib
@@ -61,3 +61,17 @@
   issn         = {0004-5411},
   url          = {https://doi.org/10.1145/278298.278306}
 }
+
+@ARTICLE{ReingoldVW02,
+  title        = {Entropy Waves, the Zig-Zag Graph Product, and New
+                  Constant-Degree Expanders},
+  author       = {Reingold, Omer and Vadhan, Salil and Wigderson, Avi},
+  journaltitle = {Annals of mathematics},
+  volume       = {155},
+  issue        = {1},
+  pages        = {157},
+  date         = {2002-01},
+  doi          = {10.2307/3062153},
+  issn         = {0003-486X},
+  url          = {http://dx.doi.org/10.2307/3062153}
+}
