制約グラフの定義を修正し、ギャップ増幅補題の説明を更新。セクションの構成を見直し、証明の概要を削除して内容を整理。文書の整合性を向上させるための修正を実施。

--- a/CSP.tex
+++ b/CSP.tex
@@ -129,7 +129,7 @@ PCP定理の証明は, NP-完全な2-CSPである3彩色問題のインスタン
 この変換の記述を容易にするために, 2-CSPのインスタンスをグラフとして表現する方法として, \emph{制約グラフ}の概念を導入する.
 
 \begin{definition}{制約グラフ}{constraint-graph}
-  2-CSPのインスタンス$\varphi=(X,\Sigma,\calI,\calC)$に対し, 以下で定まる組$G=\ip{(V,E),\Sigma,\calC'}$を\emph{制約グラフ}という:
+  2-CSPのインスタンス$\varphi=(X,\Sigma,\calI,\calC)$に対し, 以下で定まる組$G=\ip{(V,E),\Sigma,\calC'}$を\emph{制約グラフ}という\footnote{制約グラフの表記に用いる括弧は形式的には本来$((V,E),\Sigma,\calC')$のようにすべきだが, 可読性のためあえて外側の括弧を$\ip{\cdot}$としている.}:
   \begin{itemize}
     \item $(V,E)$はグラフである. ただし頂点集合は$V=X$であり, 辺集合は$E=\calI$である. なお, ここで考えるグラフは多重辺や自己ループを持ちうるもの\footnote{具体的には$E$は多重集合であり, 自己ループに対応する辺は$\{u\}$と表す.}とし, 特に$\abs{I_i}=1$の場合は対応する辺は自己ループとする.
     \item アルファベット$\Sigma$.
