--- a/commands.tex
+++ b/commands.tex
@@ -97,6 +97,33 @@
 \newcommand{\boldy}{\boldsymbol{y}}
 \newcommand{\boldz}{\boldsymbol{z}}
 
+\newcommand{\boldA}{\boldsymbol{A}}
+\newcommand{\boldB}{\boldsymbol{B}}
+\newcommand{\boldC}{\boldsymbol{C}}
+\newcommand{\boldD}{\boldsymbol{D}}
+\newcommand{\boldE}{\boldsymbol{E}}
+\newcommand{\boldF}{\boldsymbol{F}}
+\newcommand{\boldG}{\boldsymbol{G}}
+\newcommand{\boldH}{\boldsymbol{H}}
+\newcommand{\boldI}{\boldsymbol{I}}
+\newcommand{\boldJ}{\boldsymbol{J}}
+\newcommand{\boldK}{\boldsymbol{K}}
+\newcommand{\boldL}{\boldsymbol{L}}
+\newcommand{\boldM}{\boldsymbol{M}}
+\newcommand{\boldN}{\boldsymbol{N}}
+\newcommand{\boldO}{\boldsymbol{O}}
+\newcommand{\boldP}{\boldsymbol{P}}
+\newcommand{\boldQ}{\boldsymbol{Q}}
+\newcommand{\boldR}{\boldsymbol{R}}
+\newcommand{\boldS}{\boldsymbol{S}}
+\newcommand{\boldT}{\boldsymbol{T}}
+\newcommand{\boldU}{\boldsymbol{U}}
+\newcommand{\boldV}{\boldsymbol{V}}
+\newcommand{\boldW}{\boldsymbol{W}}
+\newcommand{\boldX}{\boldsymbol{X}}
+\newcommand{\boldY}{\boldsymbol{Y}}
+\newcommand{\boldZ}{\boldsymbol{Z}}
+
 \newcommand{\veca}{\vec{a}}
 \newcommand{\vecb}{\vec{b}}
 \newcommand{\vecc}{\vec{c}}
