コマンドに新たに真偽値を表す定義を追加し、3彩色問題および線形方程式に関する記述を修正。文書全体の整合性を向上させるための修正を実施し、PCP定理の背景に関する新たなセクションを追加。PDFおよびSynctexファイルを更新し、BiberログとLaTeXmkデータベースを最新の状態に保つための調整を行った。

--- a/commands.tex
+++ b/commands.tex
@@ -12,6 +12,10 @@
 \newcommand{\tif}{\text{if }}
 \newcommand{\totherwise}{\text{otherwise}}
 
+
+
+\newcommand{\true}{\mathsf{true}}
+\newcommand{\false}{\mathsf{false}}
 \newcommand{\e}{\mathrm{e}}
 \DeclareMathOperator*{\E}{\mathbb{E}}
 \DeclareMathOperator*{\Var}{\mathbf{Var}}
@@ -35,8 +39,11 @@
 \renewcommand{\epsilon}{\varepsilon}
 \newcommand{\size}{\mathrm{size}}
 
-\newcommand{\PRIMES}{\mathrm{PRIMES}}
-\newcommand{\ThreeCOL}{\mathrm{3COL}}
+\newcommand{\PRIMES}{\textsc{Primes}}
+\newcommand{\ThreeCOL}{\textsc{3COL}}
+\newcommand{\LinEq}{\textsc{LinEq}}
+\renewcommand{\SAT}{\textsc{SAT}}
+\newcommand{\ThreeSAT}{\textsc{3SAT}}
 
 \newcommand{\RS}{\mathrm{RS}}
 \newcommand{\RM}{\mathrm{RM}}
