--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,65 @@
+@ARTICLE{Levin1973,
+  title        = {Universal Sequential Search Problems},
+  author       = {Levin, Leonid Anatolievich},
+  journaltitle = {Problems of Information Transmission (translated from Problemy
+                  Peredachi Informatsii (Russian))},
+  volume       = {9},
+  issue        = {3},
+  pages        = {115--116},
+  date         = {1973},
+  url          = {https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=ppi&paperid=914&option_lang=eng},
+  urldate      = {2025-05-15}
+}
+
+@ARTICLE{BLR93,
+  title        = {Self-testing/correcting with applications to numerical
+                  problems},
+  author       = {Blum, Manuel and Luby, Michael and Rubinfeld, Ronitt},
+  journaltitle = {Journal of Computer and System Sciences},
+  volume       = {47},
+  issue        = {3},
+  pages        = {549--595},
+  date         = {1993},
+  doi          = {10.1016/0022-0000(93)90044-W},
+  issn         = {0022-0000},
+  url          = {http://dx.doi.org/10.1016/0022-0000(93)90044-W}
+}
+
+
+@INBOOK{Karp1972,
+  title     = {Reducibility among Combinatorial Problems},
+  author    = {Karp, Richard M},
+  booktitle = {Complexity of Computer Computations},
+  publisher = {Springer US},
+  location  = {Boston, MA},
+  pages     = {85--103},
+  date      = {1972},
+  doi       = {10.1007/978-1-4684-2001-2_9},
+  isbn      = {9781468420036,9781468420012},
+  url       = {http://dx.doi.org/10.1007/978-1-4684-2001-2_9},
+  urldate   = {2025-05-15},
+  language  = {en}
+}
+
+
+@INPROCEEDINGS{Cook1971,
+  title      = {The complexity of theorem-proving procedures},
+  author     = {Cook, Stephen A},
+  booktitle  = {Proceedings of the third annual ACM symposium on Theory of
+                computing - STOC '71},
+  publisher  = {ACM Press},
+  location   = {New York, New York, USA},
+  eventtitle = {the third annual ACM symposium},
+  venue      = {Shaker Heights, Ohio, United States},
+  date       = {1971},
+  doi        = {10.1145/800157.805047},
+  url        = {http://dx.doi.org/10.1145/800157.805047},
+  urldate    = {2025-05-15},
+  language   = {en}
+}
+
+
+
 @ARTICLE{AKS04,
   title        = {{PRIMES} is in {P}},
   author       = {Agrawal, Manindra and Kayal, Neeraj and Saxena, Nitin},
